methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:5: error: value Yellow is not a member of object java.awt.Color
def faireMotif() {faireV(Color.Yellow);faireV(Color.red);faireV(Color.blue);faireV(Color.green) }
                               ^